--- a/blogapp_client/src/components/blogCard/styles/styles.module.css
+++ b/blogapp_client/src/components/blogCard/styles/styles.module.css
@@ -80,6 +80,9 @@
 .niche__interactive_container .interactive_container li {
   cursor: pointer;
 }
+.niche__interactive_container .interactive_container li a {
+  margin: 0;
+}
 .niche__interactive_container .interactive_container .showmore_container {
   position: relative;
 }
@@ -99,6 +102,8 @@
   align-items: center;
   padding: 8px 10px;
   transition: background-color 0.3s ease;
+  width: 100%;
+  height: 36px;
 }
 .niche__interactive_container .interactive_container .showmore_container ul li:hover {
   background-color: #1C1B1A;
