--- a/blogapp_client/src/components/blogCard/styles/styles.module.scss
+++ b/blogapp_client/src/components/blogCard/styles/styles.module.scss
@@ -110,7 +110,9 @@ align-items: center;
         align-items: center;
         padding: 8px 10px;
         transition: background-color 0.3s ease;
-
+        width:100%;
+        height: 36px;
+ 
         &:hover {
           background-color: #1C1B1A;
           border-radius: 4px;
@@ -118,7 +120,7 @@ align-items: center;
 
         svg {
          font-size: 20px;
-         margin-right: 5px;
+         margin-right: 5px; 
         }
 
         span {
