--- a/blogapp_client/src/components/blogCards/styles/styles.module.scss
+++ b/blogapp_client/src/components/blogCards/styles/styles.module.scss
@@ -12,7 +12,7 @@
 
   .my_masonry_grid {
     display: flex;
-    margin-left: -30px; /* gutter size offset */
+    margin-left: -30px; 
     width: auto;
     margin-top: 100px;
     max-width: 1200px;
@@ -20,40 +20,37 @@
   } 
   
   .my_masonry_grid_column {
-    padding-left: 30px; /* gutter size */
+    padding-left: 30px; 
     background-clip: padding-box;
   }
-  
-  /* Style your items */
+ 
   .my_masonry_grid_column > div {
     margin-bottom: 60px;
   }
   
-  /* Preserve existing styles */
   .card_grid {
     margin-top: 100px;
     max-width: 1200px;
     margin-inline: auto;
   }
-  
-  /* Media queries for responsiveness */
+ 
   @media (max-width: 1100px) {
     .my_masonry_grid {
-      margin-left: -15px; /* Adjust gutter size for smaller screens */
+      margin-left: -15px;  
       padding: 0 20px;
 
     }
     .my_masonry_grid_column {
-      padding-left: 15px; /* Adjust gutter size for smaller screens */
+      padding-left: 15px;  
     }
   }
   
   @media (max-width: 700px) {
     .my_masonry_grid {
-      margin-left: 0; /* Remove gutter for single column */
+      margin-left: 0;  
       padding: 0 20px;
     }
     .my_masonry_grid_column {
-      padding-left: 0; /* Remove gutter for single column */
+      padding-left: 0;  
     }
   }
